discussion/jgit/163401/163401_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix BadComparable error flagged by error prone

Running recent error prone version complaining on that code:

LfsPointer.java:171: error: [BadComparable] Possible sign flip from
narrowing conversion
		return (int) (getSize() - o.getSize());
		       ^
    (see https://errorprone.info/bugpattern/BadComparable)
  Did you mean 'return Long.compare(getSize(), o.getSize());'?

Bug: 562756
Change-Id: I0522f1025319a9290c448a064fbafdb4b16d1d59
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Matthias Sohn
Date: 2020-06-01 22:56:32.000000000
Message: 
Patch Set 4: Patch Set 3 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-01 22:56:40.000000000
Message: 
Patch Set 4:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3253/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-01 23:57:59.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3253/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 02:51:27.000000000
Message: 
Patch Set 4: -Verified

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3254/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 03:52:25.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3254/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 06:30:32.000000000
Message: 
Patch Set 4: -Verified

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3257/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 06:45:53.000000000
Message: 
Patch Set 4: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3257/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2020-06-02 06:52:37.000000000
Message: 
Change has been successfully merged by Matthias Sohn
----------------------------------------------------------------------------------------------------------------------
